[gd_scene load_steps=7 format=3 uid="uid://d168oh28xo2jj"]

[ext_resource type="Script" path="res://scenes/final.gd" id="1_ac85y"]
[ext_resource type="Script" path="res://scenes/lineEdit.gd" id="2_aysfp"]
[ext_resource type="FontFile" uid="uid://b628jwsgrcia5" path="res://data/ASSETS/fonts/veteran typewriter.ttf" id="3_4bl8r"]

[sub_resource type="Animation" id="Animation_ka23d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.372549, 0.372549, 0.372549, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.788235, 0, 0, 0.431373)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.788235, 0, 0, 0.431373)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../lineEdit/locked:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.560784, 0, 0, 0.431373)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.788235, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x2ida"]
resource_name = "finals"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.5, 1, 2.1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.372549, 0.372549, 0.372549, 0), Color(0.372549, 0.372549, 0.372549, 0.431373), Color(0.372549, 0.372549, 0.372549, 0.607843), Color(0.372549, 0.372549, 0.372549, 0.862745), Color(0.372549, 0.372549, 0.372549, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../lineEdit/locked:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2.1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.560784, 0, 0, 0), Color(0.560784, 0, 0, 0.431373), Color(0.560784, 0, 0, 0.607843), Color(0.560784, 0, 0, 0.862745), Color(0.560784, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2.1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.788235, 0, 0, 0), Color(0.788235, 0, 0, 0.431373), Color(0.788235, 0, 0, 0.607843), Color(0.788235, 0, 0, 0.862745), Color(0.788235, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2.1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.788235, 0, 0, 0), Color(0.788235, 0, 0, 0.431373), Color(0.788235, 0, 0, 0.607843), Color(0.788235, 0, 0, 0.862745), Color(0.788235, 0, 0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 2.1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.788235, 0, 0, 0), Color(0.788235, 0, 0, 0.686275), Color(0.788235, 0, 0, 1), Color(0.788235, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3c4ac"]
_data = {
"RESET": SubResource("Animation_ka23d"),
"finals": SubResource("Animation_x2ida")
}

[node name="finals" type="CanvasLayer"]
script = ExtResource("1_ac85y")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 32.0
offset_top = 28.0
offset_right = 1321.0
offset_bottom = 735.0
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="lineEdit" type="LineEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -20.0
offset_right = 159.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../CanvasLayer/ColorRect")
secret = true
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("2_aysfp")

[node name="locked" type="Label" parent="lineEdit"]
modulate = Color(0.560784, 0, 0, 0.431373)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -230.0
offset_right = 254.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4bl8r")
theme_override_font_sizes/font_size = 25
text = "you have to log in first before you can ask for help. enter the password
hint: look for people

press ctrl + r to return and look for password if  look for hint."
autowrap_mode = 2

[node name="indicator" type="Label" parent="lineEdit"]
layout_mode = 0
offset_left = 49.0
offset_top = 49.0
offset_right = 170.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="Label2" type="Label" parent="lineEdit"]
layout_mode = 0
offset_left = 132.0
offset_top = -40.0
offset_right = 172.0
offset_bottom = -14.0
text = "PC 6"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 92.0
offset_top = 85.0
offset_right = 137.0
offset_bottom = 156.0
scale = Vector2(25.8504, 8.60796)
color = Color(0.372549, 0.372549, 0.372549, 0)

[node name="Label4" type="Label" parent="CanvasLayer"]
modulate = Color(0.788235, 0, 0, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -287.0
offset_top = 151.0
offset_right = 256.0
offset_bottom = 248.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4bl8r")
theme_override_font_sizes/font_size = 50
text = "you survived!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
modulate = Color(0.788235, 0, 0, 0.431373)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.5
offset_top = -48.5
offset_right = 271.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4bl8r")
theme_override_font_sizes/font_size = 20
text = "You were able to log in the computer and asked for help. 
Help is on their way. You will get out of here alive!"

[node name="Label3" type="Label" parent="CanvasLayer"]
modulate = Color(0.788235, 0, 0, 0.431373)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 113.0
offset_right = 403.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4bl8r")
theme_override_font_sizes/font_size = 20
text = "press space bar to continue..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_3c4ac")
}

[connection signal="text_changed" from="lineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="lineEdit" to="." method="_on_line_edit_text_submitted"]
